...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="86dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/date_time"
            tools:layout="@layout/fragment_task_list" />

        <TextView
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
