<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_circle_h"
            android:title="Home" />

        <item
            android:icon="@drawable/ic_circle_w"
            android:id="@+id/work"
            android:title="Work" />

        <item
            android:icon="@drawable/ic_circle_s"
            android:id="@+id/school"
            android:title="School" />
        <item
            android:icon="@drawable/ic_circle_e"
            android:id="@+id/errands"
            android:title="Errands" />

        <item
            android:id="@+id/cancel"
            android:title="Cancel" />
    </group>

</menu>
